added some styling
styling commit

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zipho Khanyile - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Hello,i'm  Zipho Khanyile</h1>
+        <h1>Hello, i'm  Zipho Khanyile</h1>
         <p>Welcome to my portfolio website! Glad to see you here.</p>
     </header>
 
