--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
     </section>
 
     <footer>
-        <p>Contact me on: +27 76 556 5204, Email: ziphok707@gmail.com</p>
+        <p> 2025 Zipho Khanyile</p>
+        <div class="social-links">
+            <a href="https://instagram.com/ziphow_khanyile" 
+            target="blank">Instagram</a>
+
+            <a href="https://github.com/zipho1989"
+            target="blank">GitHub</a>
+
+            <a href="https://linkedin.com/in/nozipho-khanyile"
+            target="blank">LinkedIn</a>
+            
+        </div>
     </footer>
   
 </body>
